--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,23 @@
 <html>
   <head>
     <title>Wander</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <link rel="manifest" href="/manifest.json">
 
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="bg-black h-full">
-    <%= yield %>
+  <body class="<%= controller_name %>-controller <%= action_name %>-action">
+    <div class="fixed inset-0 animate-gradient mesh-gradient-dark opacity-70 z-0"></div>
+
+    <main class="z-10 absolute inset-0">
+      <%= yield %>
+    </main>
+
   </body>
 </html>
