--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-<div class="text-center mt-16 ">
+<div class="relative text-center mt-16 ">
   <h1 class="text-xl text-white font-bold">Firstname LASTNAME</h1>
   <p class="text-sm text-gray-300">Traveller type</p>
   <div class="flex justify-center items-center mt-2">
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<div class="text-center mt-6">
+<div class="relative text-center mt-6">
   <%= link_to 'Ajouter un voyage', new_trip_path, class: "bg-orange-600 text-white py-2 px-6 rounded-md text-sm hover:bg-orange-700" %>
 </div>
 
