--- a/app/views/destinations/new.html.erb
+++ b/app/views/destinations/new.html.erb
@@ -5,15 +5,15 @@
     <%= form_with(model: @destination, url: destinations_path, local: true, class: "space-y-4") do |form| %>
       <div>
         <%= form.label :address, class: "block text-gray-700" %>
-        <%= form.text_field :address, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" %>
+        <%= form.text_field :address, value: "Lille", class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" %>
       </div>
       <div>
         <%= label_tag :start_date, "Start Date", class: "block text-gray-700" %>
-        <%= date_field_tag :start_date, nil, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" %>
+        <%= date_field_tag :start_date, "2025-01-01", class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" %>
       </div>
       <div>
         <%= label_tag :end_date, "End Date", class: "block text-gray-700" %>
-        <%= date_field_tag :end_date, nil, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" %>
+        <%= date_field_tag :end_date, "2025-01-02", class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" %>
       </div>
       <div>
         <%= form.submit "Verify Information", class: "w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" %>
