--- a/app/views/trips/_tabs_form.html.erb
+++ b/app/views/trips/_tabs_form.html.erb
@@ -1,6 +1,6 @@
-<div class="flex gap-3 p-4" data-controller="tabs-form-new-trip" data-tabs-form-new-trip-target="tabs">
-  <div class="text-sm font-medium text-white border bg-opacity-25 px-4 py-2" data-tabs-form-new-trip-target="tabs">Où</div>
-  <div class="text-sm font-medium text-white border bg-opacity-25 px-4 py-2" data-tabs-form-new-trip-target="tabs">Quand</div>
-  <div class="text-sm font-medium text-white border bg-opacity-25 px-4 py-2" data-tabs-form-new-trip-target="tabs">Avec</div>
-  <div class="text-sm font-medium text-white border bg-opacity-25 px-4 py-2" data-tabs-form-new-trip-target="tabs">Options</div>
-</div>
+<ul class="steps my-4" data-controller="tabs-form-new-trip" data-tabs-form-new-trip-target="tabs">
+  <li class="step step-warning text-sm font-medium text-white" data-tabs-form-new-trip-target="tabs">Où</li>
+  <li class="step text-sm font-medium text-white" data-tabs-form-new-trip-target="tabs">Quand</li>
+  <li class="step text-sm font-medium text-white" data-tabs-form-new-trip-target="tabs">Avec</li>
+  <li class="step text-sm font-medium text-white" data-tabs-form-new-trip-target="tabs">Options</li>
+</ul>
