--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -9,8 +9,6 @@
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  touch-action: manipulation;
   overscroll-behavior: none;
 }
 
@@ -25,6 +23,11 @@ body {
   align-items: center;
 }
 
-#main-content {
+main {
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
   transition: opacity 1s ease;
+  background-color: black;
 }
