--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-	  
+
     <link rel="manifest" href="/manifest.json">
     <%= javascript_importmap_tags %>
   </head>
@@ -16,7 +16,7 @@
   <body class="<%= controller_name %>-controller <%= action_name %>-action">
     <div class="fixed inset-0 animate-gradient mesh-gradient-dark opacity-70 z-0"></div>
 
-    <main class="z-10 absolute inset-0">
+    <main class="z-10 inset-0">
       <%= yield %>
     </main>
 
