--- a/app/views/trips/_form_destination.html.erb
+++ b/app/views/trips/_form_destination.html.erb
@@ -1,9 +1,6 @@
-<div class="p-4">
-  <div class="flex items-start gap-5">
-    <p class="text-sm font-medium text-white mt-1 flex-0">Step 1 :</p>
-    <div class="flex flex-col flex-1">
-      <p class="text-xl font-extralight text-white">Choisissez une destination :</p>
-    </div>
+<div class="px-4">
+  <div class="flex flex-col flex-1">
+    <p class="text-xl font-extralight text-white">Choisissez une destination :</p>
   </div>
 
   <%= simple_form_for @trip, html: { class: ""} do |f| %>
@@ -81,8 +78,4 @@
   <div class="carousel-item w-1/2">
     <%= image_tag 'rome.jpg', class: "rounded-box w-full h-full object-cover" %>
   </div>
-</div>
-
-<div class="absolute bottom-10 w-full flex justify-center mt-6 ">
-  <button class="next-step bg-opacity-50 text-sm font-medium text-white border px-4 py-2 hover:bg-white hover:text-black" data-next-step="2">Next</button>
 </div>
