--- a/app/views/trips/_form_partners.html.erb
+++ b/app/views/trips/_form_partners.html.erb
@@ -1,4 +1,4 @@
-<div class="p-4">
+<div class="px-4">
   <div class="flex items-start gap-5 mb-2">
     <p class="text-sm font-medium text-white mt-1 flex-0">Step 3 :</p>
     <div class="flex flex-col flex-1">
@@ -36,9 +36,9 @@
       <!-- Adults -->
       <div class="flex justify-between items-center">
         <div class="flex items-center gap-2">
-          <span class="font-material">person</span>
-          <p>Adults</p>
-          <small class="text-gray-300 text-sm">Ages 13 or above</small>
+          <span class="font-material text-white">person</span>
+          <p class="text-white">Adulte(s)</p>
+          <small class="text-gray-300 text-sm">13 ans ou plus</small>
         </div>
         <div class="flex items-center gap-4">
           <button class="w-8 h-8 bg-black text-white rounded-full">-</button>
@@ -49,9 +49,9 @@
       <!-- Children -->
       <div class="flex justify-between items-center">
         <div class="flex items-center gap-2">
-          <span class="material-icons">child_friendly</span>
-          <p>Children</p>
-          <small class="text-gray-300 text-sm">Ages 2-13</small>
+          <span class="material-icons text-white">child_friendly</span>
+          <p class="text-white">Enfant(s)</p>
+          <small class="text-gray-300 text-sm">2 à 13 ans</small>
         </div>
         <div class="flex items-center gap-4">
           <button class="w-8 h-8 bg-black text-white rounded-full">-</button>
@@ -62,9 +62,9 @@
       <!-- Infants -->
       <div class="flex justify-between items-center">
         <div class="flex items-center gap-2">
-          <span class="material-icons">baby_changing_station</span>
-          <p>Infants</p>
-          <small class="text-gray-300 text-sm">Under 2</small>
+          <span class="material-icons text-white">baby_changing_station</span>
+          <p class="text-white">Bébé(s)</p>
+          <small class="text-gray-300 text-sm">2ans et moins</small>
         </div>
         <div class="flex items-center gap-4">
           <button class="w-8 h-8 bg-black text-white rounded-full">-</button>
@@ -78,10 +78,4 @@
 
   <%= simple_form_for @trip, html: { class: "space-y-6" }  do |f| %>
   <% end %>
-
-</div>
-
-<div class="absolute bottom-10 w-full flex justify-center mt-6 gap-5">
-  <button class="prev-step bg-opacity-50 text-sm font-medium text-white border px-4 py-2 hover:bg-white" data-prev-step="2">Retour</button>
-  <button id="submit" class="bg-opacity-50 text-sm font-medium text-white border px-4 py-2 hover:bg-white">Valider</button>
 </div>
