--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -77,5 +77,77 @@
 
     </div>
 
+    <!-- Voyage 3 -->
+    <div class="flex items-center space-x-2">
+      <div class="relative z-10 flex-shrink-0">
+        <div class="w-3 h-3 bg-white rounded-full"></div>
+      </div>
+      <div class="relative bg-cover bg-center rounded-lg shadow-md overflow-hidden h-40 w-full" style="background-image: url('https://images.unsplash.com/photo-1576375801517-45814f908aa4?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+        <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/30 to-transparent"></div>
+        <div class="absolute inset-0  bg-opacity-40 flex flex-col justify-center p-4">
+          <p class="text-white italic text-sm mb-2">Du 19/12/2019 au 01/01/2020</p>
+          <h2 class="text-white font-bold text-lg">MONTREAL 2019</h2>
+          <p class="text-white italic text-xs">Avec Michel et Thierry</p>
+          <div class="mt-4">
+            <a href="#" class="text-white text-sm font-semibold flex gap-1 justify-end items-center">
+              Voir le voyage
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Voyage 3 -->
+    <div class="flex items-center space-x-2">
+      <div class="relative z-10 flex-shrink-0">
+        <div class="w-3 h-3 bg-white rounded-full"></div>
+      </div>
+      <div class="relative bg-cover bg-center rounded-lg shadow-md overflow-hidden h-40 w-full" style="background-image: url('https://images.unsplash.com/photo-1576375801517-45814f908aa4?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+        <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/30 to-transparent"></div>
+        <div class="absolute inset-0  bg-opacity-40 flex flex-col justify-center p-4">
+          <p class="text-white italic text-sm mb-2">Du 19/12/2019 au 01/01/2020</p>
+          <h2 class="text-white font-bold text-lg">MONTREAL 2019</h2>
+          <p class="text-white italic text-xs">Avec Michel et Thierry</p>
+          <div class="mt-4">
+            <a href="#" class="text-white text-sm font-semibold flex gap-1 justify-end items-center">
+              Voir le voyage
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Voyage 3 -->
+    <div class="flex items-center space-x-2">
+      <div class="relative z-10 flex-shrink-0">
+        <div class="w-3 h-3 bg-white rounded-full"></div>
+      </div>
+      <div class="relative bg-cover bg-center rounded-lg shadow-md overflow-hidden h-40 w-full" style="background-image: url('https://images.unsplash.com/photo-1576375801517-45814f908aa4?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+        <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/30 to-transparent"></div>
+        <div class="absolute inset-0  bg-opacity-40 flex flex-col justify-center p-4">
+          <p class="text-white italic text-sm mb-2">Du 19/12/2019 au 01/01/2020</p>
+          <h2 class="text-white font-bold text-lg">MONTREAL 2019</h2>
+          <p class="text-white italic text-xs">Avec Michel et Thierry</p>
+          <div class="mt-4">
+            <a href="#" class="text-white text-sm font-semibold flex gap-1 justify-end items-center">
+              Voir le voyage
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
   </div>
 </div>
