--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,38 +1,45 @@
 <div id="screen-container" class="relative h-screen overflow-hidden pb-safe-bottom flex flex-col" data-controller="add-trip-animation">
-  <div id="pulse-button" data-add-trip-animation-target="pulseButton" class="absolute transition-opacity duration-1000 animate-pulse-slow flex justify-center items-center bottom-10 w-full">
-    <div class="w-16 h-16 halo animate-gradient mesh-gradient-orange rounded-full"></div>
-  </div>
+  <div data-controller="stepper">
+    <div id="pulse-button" data-add-trip-animation-target="pulseButton" class="absolute transition-opacity duration-1000 animate-pulse-slow flex justify-center items-center bottom-10 w-full">
+      <div class="w-16 h-16 halo animate-gradient mesh-gradient-orange rounded-full"></div>
+    </div>
 
-  <div id="title-part" data-add-trip-animation-target="titlePart" class="relative min-h-28 flex items-start w-full">
-    <p id="typewriter-text" data-add-trip-animation-target="text" class="px-3 text-white text-lg font-semibold"></p>
-  </div>
+    <div id="title-part" data-add-trip-animation-target="titlePart" class="relative min-h-24 flex items-start w-full">
+      <p id="typewriter-text" data-add-trip-animation-target="text" class="px-3 text-white text-2xl font-semibold"></p>
+    </div>
 
-  <div id="form-part" class="form relative opacity-0 transition-opacity inset-0 flex flex-col flex-grow" data-add-trip-animation-target="formPart">
-    <%= render 'tabs_form' %>
+    <div id="form-part" class="form relative opacity-0 transition-opacity inset-0 flex flex-col flex-grow" data-add-trip-animation-target="formPart">
+      <%= render 'tabs_form' %>
 
-    <div id="stepper-container" class="stepper" data-controller="stepper">
-      <!-- Étape 1 -->
-      <div class="step" data-step="1">
-        <%= render 'form_destination' %>
-      </div>
+      <div id="stepper-container" class="stepper relative">
+        <!-- Étape 1 -->
+        <div class="absolute step transition-transform transform translate-x-0" data-stepper-target="step">
+          <%= render 'form_destination' %>
+        </div>
 
-      <!-- Étape 2 -->
-      <div class="step hidden" data-step="2">
-        <%= render 'form_dates' %>
-      </div>
+        <!-- Étape 2 -->
+        <div class="absolute step transition-transform transform translate-x-full" data-stepper-target="step">
+          <%= render 'form_dates' %>
+        </div>
 
-      <div class="step hidden" data-step="3">
-        <%= render 'form_partners' %>
-      </div>
+        <!-- Étape 3 -->
+        <div class="absolute step transition-transform transform translate-x-full" data-stepper-target="step">
+          <%= render 'form_partners' %>
+        </div>
 
-      <!-- Résumé -->
-      <div id="summary" class="hidden">
-        <h2>Summary</h2>
-        <p id="summary-destination"></p>
-        <p id="summary-dates"></p>
-        <button id="restart">Restart</button>
+        <!-- Étape 4 -->
+        <div class="absolute step transition-transform transform translate-x-full" data-stepper-target="step">
+          <%= render 'form_partners' %>
+        </div>
       </div>
     </div>
-  </div>
 
+    <div class="w-full flex justify-center mt-6 gap-5 absolute bottom-10 opacity-0 transition-opacity duration-500"
+      data-add-trip-animation-target="buttons">
+      <button class="prev-step bg-opacity-50 text-sm font-medium text-white border px-4 py-2 hover:bg-white"
+              data-stepper-target="prevButton"
+              data-action="click->stepper#previousStep">Précédent</button>
+      <button class="next-step bg-opacity-50 text-sm font-medium text-white border px-4 py-2 hover:bg-white" data-action="click->stepper#nextStep">Suivant</button>
+    </div>
+  </div>
 </div>
