--- a/app/views/destinations/new.html.erb
+++ b/app/views/destinations/new.html.erb
@@ -3,6 +3,19 @@
     <h2 class="text-2xl font-bold mb-6">Create a New Trip</h2>
     <%= form_with(model: @destination, url: destinations_path, local: true, class: "space-y-4") do |form| %>
       <div>
+        <p class="block text-gray-700 font-medium">Type</p>
+        <div class="flex items-center space-x-4 mt-2">
+          <label class="inline-flex items-center">
+            <%= form.radio_button :type, "Pays", class: "text-indigo-600 focus:ring-indigo-500" %>
+            <span class="ml-2 text-gray-700">Pays</span>
+          </label>
+          <label class="inline-flex items-center">
+            <%= form.radio_button :type, "Ville", class: "text-indigo-600 focus:ring-indigo-500", checked: true %>
+            <span class="ml-2 text-gray-700">Ville</span>
+          </label>
+        </div>
+      </div>
+      <div>
         <%= form.label :address, class: "block text-gray-700" %>
         <%= form.text_field :address, value: "Lille", class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" %>
       </div>
