--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -11,17 +11,10 @@
     </div>
 
     <!-- Bouton de retour -->
-    <button
-      class="absolute top-4 left-4 bg-white p-2 rounded-full shadow-md"
-      onclick="history.back()"
-    >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="h-6 w-6 text-gray-800"
-        fill="currentColor"
-        viewBox="0 0 24 24"
-      >
-        <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z" />
+    <button class="absolute top-4 left-4 btn  bg-white text-gray-900 w-12 h-12 flex items-center justify-center z-10"
+      onclick="history.back()">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
       </svg>
     </button>
 
