--- a/app/views/trips/_carrousel_item.html.erb
+++ b/app/views/trips/_carrousel_item.html.erb
@@ -1,34 +1,37 @@
-<div
-          class="carousel-item bg-white shadow-lg rounded-lg w-80 p-4 border border-gray-200 cursor-pointer hover:shadow-xl transition-shadow"
-          data-action="click->carrousel#select"
-          data-carousel-index-value="<%= index %>">
 
-          <!-- Photo -->
-          <% if activity.photos.first.key.present? %>
-            <%= cl_image_tag activity.photos.first.key, class: "rounded-full size-20" %>
-          <% else %>
-            <%= image_tag 'no_picture.jpg', class: "rounded-full size-20", alt: "No picture available" %>
-          <% end %>
+<%= link_to activity_path(activity) do%>
+  <div
+  class="carousel-item snap-start bg-gray-800 shadow-lg rounded-lg p-4 w-80 border border-gray-200 cursor-pointer hover:shadow-xl transition-shadow w-72"
+  data-carrousel-target="item"
+  data-carousel-index-value="<%= index %>"
+>
+  <!-- Photo -->
+  <% if activity.photos.first.key.present? %>
+    <%= cl_image_tag activity.photos.first.key, class: "rounded-full size-20" %>
+  <% else %>
+    <%= image_tag 'no_picture.jpg', class: "rounded-full size-20", alt: "No picture available" %>
+  <% end %>
 
-          <!-- Infos -->
-          <div class="flex-col pl-4">
-            <div class="flex items-center justify-between">
-              <h3 class="text-lg font-semibold text-gray-800"><%= activity.name %></h3>
-            </div>
-            <p class="text-xs text-gray-600"><%= activity.name %></p>
-            <div class="flex items-center space-x-1 text-yellow-400">
-              <% activity.reviews.to_i.times do %>
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-3" fill="currentColor" viewBox="0 0 24 24">
-                  <path d="M12 .587l3.668 7.429L24 9.753l-6 5.837 1.417 8.26L12 18.897l-7.417 4.953L6 15.59l-6-5.837 8.332-1.737z" />
-                </svg>
-              <% end %>
-            </div>
-            <div class=" text-xs text-gray-500 flex items-center mt-2">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
-                <path d="M12 2C8.134 2 5 5.134 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.866-3.134-7-7-7zm0 9.5c-1.381 0-2.5-1.119-2.5-2.5s1.119-2.5 2.5-2.5 2.5 1.119 2.5 2.5-1.119 2.5-2.5 2.5z" />
-              </svg>
-              <%= activity.address %>
-            </div>
-          </div>
+  <!-- Infos -->
+  <div class="flex-col pl-4">
+    <div class="flex items-center justify-between">
+      <h3 class="text-lg font-semibold text-white"><%= activity.name %></h3>
+    </div>
+    <p class="text-white"><%= activity.name %></p>
+    <div class="flex items-center space-x-1 text-yellow-400">
+      <% activity.reviews.to_i.times do %>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-3" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M12 .587l3.668 7.429L24 9.753l-6 5.837 1.417 8.26L12 18.897l-7.417 4.953L6 15.59l-6-5.837 8.332-1.737z" />
+        </svg>
+      <% end %>
+    </div>
+    <div class="text-xs text-white flex items-center mt-2">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M12 2C8.134 2 5 5.134 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.866-3.134-7-7-7zm0 9.5c-1.381 0-2.5-1.119-2.5-2.5s1.119-2.5 2.5-2.5 2.5 1.119 2.5 2.5-1.119 2.5-2.5 2.5z" />
+      </svg>
+      <%= activity.address %>
+    </div>
+  </div>
+</div>
 
-        </div>
+<% end%>
