--- a/app/views/trips/_toggle_nav.html.erb
+++ b/app/views/trips/_toggle_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="absolute bottom-4 left-1/2 transform -translate-x-1/2 z-20 flex space-x-0  bg-black rounded-full w-48 h-12 overflow-hidden border border-white">
+<div class="absolute bottom-4 left-1/2 transform -translate-x-1/2 z-20 flex space-x-0  bg-gray-800 rounded-full w-48 h-12 overflow-hidden  ">
 
   <!-- Slider Background -->
   <div
