--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,44 @@
-<h2>Sign up</h2>
+<div class="container-login max-w-md mx-10 mt-10 p-6 bg-white shadow-md rounded-lg">
+<h2 class="text-2xl font-bold text-center text-gray-700 mb-6">Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+      <div class="form-inputs space-y-4">
+        <%= f.input :first_name, label: "First name",
+                        input_html: { class: "form-control" },
+                        label_html: { class: "form-label" } %>
+        <%= f.input :last_name, label: "Last name",
+                        input_html: { class: "form-control" },
+                        label_html: { class: "form-label" } %>
+        <%= f.input :username, label: "Username",
+                        input_html: { class: "form-control" },
+                        label_html: { class: "form-label" } %>
+        <%= f.input :address, label: "Address",
+                        input_html: { class: "form-control" },
+                        label_html: { class: "form-label" } %>
+        <%= f.input :email,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "email" }%>
+        <%= f.input :password,
+                    required: true,
+                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                    required: true,
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :photo, label: "Profil picture",
+                        as: :file,
+                        input_html: { class: "form-control" },
+                        label_html: { class: "form-label" }, class:"border-black" %>
+      </div>
+
+      <div class="form-actions mt-11 flex justify-center">
+        <%= f.button :submit, "Sign up",class: "bg-blue-500 text-white text-sm font-medium py-2 px-4 rounded-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" %>
+      </div>
+    <% end %>
+  <div class="mt-4 text-center">
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
