front + form + home + modal

--- a/app/assets/stylesheets/components/_flatpicker.scss
+++ b/app/assets/stylesheets/components/_flatpicker.scss
@@ -23,6 +23,10 @@
   font-weight: bold !important;
 }
 
+.flatpickr-month {
+  color: white !important;
+}
+
 .flatpickr-monthDropdown-months {
   -webkit-appearance: none !important;
   -moz-appearance: none !important;
