--- a/app/assets/stylesheets/pages/_trips.scss
+++ b/app/assets/stylesheets/pages/_trips.scss
@@ -5,6 +5,6 @@
 #title-part {
   display: block;
   overflow: hidden;
-  margin-top: calc(100svh - 230px);
+  margin-top: calc(100vh - 290px);
   transition: margin-top 1s ease-in-out;
 }
