--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -10,6 +10,7 @@ body {
   margin: 0;
   padding: 0;
   overscroll-behavior: none;
+  background-color: black;
 }
 
 #splash-screen {
@@ -27,7 +28,6 @@ main {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100%;
+  min-height: 100vh;
   transition: opacity 1s ease;
-  background-color: black;
 }
