--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Wander</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -14,11 +14,14 @@
   </head>
 
   <body class="<%= controller_name %>-controller <%= action_name %>-action">
+
     <div class="fixed inset-0 animate-gradient mesh-gradient-dark opacity-70 z-0"></div>
 
-    <main class="z-10 inset-0">
+    <main class="relative z-10 inset-0">
       <%= yield %>
     </main>
+
+    <turbo-frame id="modal-frame"></turbo-frame>
 
   </body>
 </html>
