--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -25,6 +25,60 @@
   <%= link_to 'Ajouter un voyage', new_trip_path, class: "bg-orange-600 text-white py-2 px-6 rounded-md text-sm hover:bg-orange-700" %>
 </div>
 
+<div id="countdown" class="relative mt-10 flex flex-col justify-center items-center px-4 text-white">
+  <p class="font-playfair text-2xl font-bold text-white">Prochain voyage dans</p>
+  <div  class="grid auto-cols-max grid-flow-col gap-5 text-center">
+    <div class="flex flex-col">
+      <span class="countdown font-playfair text-5xl font-bold">
+        <span id="days" style="--value:15;"></span>
+      </span>
+      days
+    </div>
+    <div class="flex flex-col">
+      <span class="countdown font-playfair text-5xl font-bold">
+        <span id="hours" style="--value:0;"></span>
+      </span>
+      hours
+    </div>
+    <div class="flex flex-col">
+      <span class="countdown font-playfair text-5xl font-bold">
+        <span id="minutes" style="--value:0;"></span>
+      </span>
+      min
+    </div>
+    <div class="flex flex-col">
+      <span class="countdown font-playfair text-5xl font-bold">
+        <span id="seconds" style="--value:0;"></span>
+      </span>
+      sec
+    </div>
+  </div>
+</div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const endDate = new Date("2024-12-06T00:00:00");
+
+    function updateCountdown() {
+      const now = new Date();
+      const diff = endDate - now;
+
+      const days = Math.floor(diff / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
+      const seconds = Math.floor((diff % (1000 * 60)) / 1000);
+
+      document.getElementById("days").setAttribute("style", `--value:${days};`);
+      document.getElementById("hours").setAttribute("style", `--value:${hours};`);
+      document.getElementById("minutes").setAttribute("style", `--value:${minutes};`);
+      document.getElementById("seconds").setAttribute("style", `--value:${seconds};`);
+    }
+
+    updateCountdown();
+    setInterval(updateCountdown, 1000); // Met à jour toutes les secondes
+  });
+</script>
+
 <div class="relative text-white flex">
   <div class="relative flex-1 flex flex-col gap-2 p-6">
     <div class="absolute top-26 bottom-0 ml-1.5 w-px bg-white"></div>
