add search items and openai

--- a/app/views/suggestions/_show.html.erb
+++ b/app/views/suggestions/_show.html.erb
@@ -1,7 +1,11 @@
 <turbo-frame id="modal-frame">
   <div data-controller="stories">
   <div class="fixed inset-0 z-20 rounded-t-lg shadow-lg transition-transform duration-500 transform translate-y-full" data-controller="modal">
-    <button class="absolute top-4 right-4 text-gray-500 z-50" data-action="click->modal#close">✕</button>
+    <button class="absolute top-4 right-4 z-50" data-action="click->modal#close">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
+        <path stroke-linecap="round" class="shadow" stroke-linejoin="round" d="M19.5 13.5 12 21m0 0-7.5-7.5M12 21V3" />
+      </svg>
+    </button>
 
     <div data-stories-target="track" class="carousel-track flex transition-transform duration-1000 ease-in-out w-full h-full">
       <div data-stories-target="item" class="carousel-item w-full flex-shrink-0">
@@ -15,7 +19,6 @@
       </div>
     </div>
 
-    <!-- Progress Bars -->
     <div class="absolute bottom-4 left-1/2 transform -translate-x-1/2 flex w-full gap-2 px-4">
       <div class="flex-1 bg-gray-300 h-1">
         <div data-stories-target="progressBar" class="h-full bg-gray-800"></div>
