--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -25,6 +25,9 @@
   <%= link_to 'Ajouter un voyage', new_trip_path, class: "bg-orange-600 text-white py-2 px-6 rounded-md text-sm hover:bg-orange-700" %>
 </div>
 
+<button class="bg-orange-600 text-white py-2 px-6 rounded-md text-sm hover:bg-orange-700" onclick="my_modal_2.showModal()">open modal</button>
+
+
 <div id="countdown" class="relative mt-10 flex flex-col justify-center items-center px-4 text-white">
   <p class="font-playfair text-2xl font-bold text-white">Prochain voyage dans</p>
   <div  class="grid auto-cols-max grid-flow-col gap-5 text-center">
@@ -205,3 +208,5 @@
 
   </div>
 </div>
+
+<%= render "stats_modal"%>
