--- a/app/views/pages/_stats_modal.html.erb
+++ b/app/views/pages/_stats_modal.html.erb
@@ -4,12 +4,20 @@
   <input type="checkbox" id="my_modal_7" class="modal-toggle" />
   <div class="modal" role="dialog">
     <div class="modal-box">
-      <h3 class="text-lg font-bold">Statistique de voyage</h3>
+      <h3 class="text-lg font-bold text-center">Statistique de voyage</h3>
+      <div class="flex justify-around my-5">
+        <p class="border border-orange-500 w-20 h-20 rounded-lg text-center
+ text-white
+"><%=@stats[:total_travels]%> voyages effectués</p>
+        <p class="border border-orange-500 w-20 h-20 rounded-lg text-center
+ text-white
+"><%=@stats[:ratio]%>% du monde visité</p>
+      </div>
       <div id="static-map" data-controller="static-map"
         data-static-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
         data-static-map-iso-codes-value= "<%= @destinations %>"
         data-static-map-target="static-map"
-        class="w-full h-64"></div>
+        class="w-full h-64 rounded-lg"></div>
     </div>
     <label class="modal-backdrop" for="my_modal_7">Close</label>
   </div>
