--- a/app/views/trips/_stats_modal.html.erb
+++ b/app/views/trips/_stats_modal.html.erb
@@ -1,20 +1,20 @@
 <dialog id="my_modal_2" class="modal">
   <div class="modal-box">
     <h3 class="text-lg font-bold text-center">Statistique de voyage</h3>
-      <div class="flex justify-around my-5">
-        <p class="border border-orange-500 w-20 h-20 rounded-lg text-center
- text-white
-"><%=@stats[:total_travels]%> voyages effectués</p>
-        <p class="border border-orange-500 w-20 h-20 rounded-lg text-center
- text-white
-"><%=@stats[:ratio]%>% du monde visité</p>
-      </div>
-      <div id="static-map" data-controller="static-map"
-        data-static-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-        data-static-map-iso-codes-value= "<%= @destinations %>"
-        data-static-map-target="static-map"
-        class="w-full h-64 rounded-lg"></div>
+    <div class="flex justify-around my-5">
+      <p class="border border-orange-500 w-20 h-20 rounded-lg text-center
+      text-white"><%=@stats[:total_travels]%> voyages effectués</p>
+      <p class="border border-orange-500 w-20 h-20 rounded-lg text-center
+      text-white"><%=@stats[:ratio]%>% du monde visité</p>
     </div>
+    <div id="static-map" data-controller="static-map"
+      data-static-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+      data-static-map-iso-codes-value= "<%= @destinations %>"
+      data-static-map-target="static-map"
+      class="w-full h-64 rounded-lg">
+    </div>
+    <p class="border border-orange-500 w-20 h-20 rounded-lg text-center mt-10
+      text-white"><%=@total_km%> km parcourus</p>
   </div>
   <form method="dialog" class="modal-backdrop">
     <button>close</button>
