--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -3,7 +3,7 @@
   <div class="relative w-full h-1/2 bg-gray-200">
     <!-- Image principale -->
     <div class="relative w-full h-full">
-      <% if @activity.photos.first&.key.present? %>
+      <% if @activity.photos.first.present? %>
         <%= cl_image_tag @activity.photos.first.key, class: "w-full h-full object-cover", data: { gallery_target: "mainImage" } %>
       <% else %>
         <%= image_tag 'no_picture.jpg', class: "w-full h-full object-cover", alt: "No picture available", data: { gallery_target: "mainImage" } %>
@@ -25,6 +25,7 @@
 
     <!-- Miniatures -->
     <div class="absolute bottom-16 left-0 right-0 mx-4 flex justify-between space-x-2 h-[7.5rem] overflow-x-scroll scrollbar-hide carousel">
+    <% if @activity.photos.first.present? %>
       <% @activity.photos.each_with_index do |photo, index| %>
         <div
           class="w-30 h-full bg-gray-800 rounded-lg flex items-center justify-center cursor-pointer shrink-0 carousel-item"
@@ -35,6 +36,7 @@
           <%= cl_image_tag photo.key, class: "w-full h-full object-cover rounded-lg", data: { image_url: cl_image_path(photo.key) } %>
         </div>
       <% end %>
+    <% end %>
     </div>
   </div>
 
